force-app/main/default/objects/Investment__c/Investment__c.object-meta.xml
<CustomObject>
    <description>Custom object to track portfolio companies related to a fund.</description>
    <label>Investment</label>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>Investment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>