force-app/main/default/objects/Investment__c/fields/Actual_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Actual_Relationship_Type__c</fullName>
    <label>Actual Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled Acquisition/Investment</fullName>
            </value>
            <value>
                <fullName>Current Investment</fullName>
            </value>
            <value>
                <fullName>Current Investment Arm</fullName>
            </value>
            <value>
                <fullName>Current Subsidiary/Operating Unit</fullName>
            </value>
            <value>
                <fullName>Merged Entity</fullName>
            </value>
            <value>
                <fullName>Pending Acquisition/Investment</fullName>
            </value>
            <value>
                <fullName>Prior Investment</fullName>
            </value>
            <value>
                <fullName>Prior Investment Arm</fullName>
            </value>
            <value>
                <fullName>Prior Subsidiary/Operating Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>