force-app/main/default/objects/Investment__c/fields/Amount_of_Investment__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Investment__c</fullName>
    <label>Amount of Investment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>