force-app/main/default/objects/Investment__c/fields/Basin__c.field-meta.xml
<CustomField>
    <fullName>Basin__c</fullName>
    <description>Area of Interest</description>
    <label>Basin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appalachia Basin</fullName>
            </value>
            <value>
                <fullName>ArkLaTex</fullName>
            </value>
            <value>
                <fullName>Canterbury Basin</fullName>
            </value>
            <value>
                <fullName>DJ Basin</fullName>
            </value>
            <value>
                <fullName>Eagle Ford</fullName>
            </value>
            <value>
                <fullName>Jonah Field</fullName>
            </value>
            <value>
                <fullName>Mississippian</fullName>
            </value>
            <value>
                <fullName>Multi-Basin</fullName>
            </value>
            <value>
                <fullName>Permian Basin</fullName>
            </value>
            <value>
                <fullName>Piceance Basin</fullName>
            </value>
            <value>
                <fullName>Powder River Basin</fullName>
            </value>
            <value>
                <fullName>San Juan Basin</fullName>
            </value>
            <value>
                <fullName>Saskatchewan</fullName>
            </value>
            <value>
                <fullName>STACK</fullName>
            </value>
            <value>
                <fullName>Utica</fullName>
            </value>
            <value>
                <fullName>Western Canadian Sedimentary Basin</fullName>
            </value>
            <value>
                <fullName>Wlliston Basin</fullName>
            </value>
            <value>
                <fullName>Zaafrane Desert Field</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>