force-app/main/default/objects/Investment__c/fields/CapIQ_Description__c.field-meta.xml
<CustomField>
    <fullName>CapIQ_Description__c</fullName>
    <label>CapIQ Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>