force-app/main/default/objects/Investment__c/fields/CapIQ_ID__c.field-meta.xml
<CustomField>
    <fullName>CapIQ_ID__c</fullName>
    <externalId>true</externalId>
    <label>CapIQ ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>