force-app/main/default/objects/Investment__c/fields/Company_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Relationship_Type__c</fullName>
    <label>Company Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current Investment</fullName>
            </value>
            <value>
                <fullName>Prior Investment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>