force-app/main/default/objects/Investment__c/fields/Current_to_Prior_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_to_Prior_Date__c</fullName>
    <label>Current to Prior Date</label>
    <type>Date</type>
</CustomField>