force-app/main/default/objects/Investment__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>HL Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>