force-app/main/default/objects/Investment__c/fields/EBITDA_Acq_Date__c.field-meta.xml
<CustomField>
    <fullName>EBITDA_Acq_Date__c</fullName>
    <label>EBITDA Acq Date</label>
    <type>Date</type>
</CustomField>