force-app/main/default/objects/Investment__c/fields/EBITDA_CapIQ__c.field-meta.xml
<CustomField>
    <fullName>EBITDA_CapIQ__c</fullName>
    <label>CapIQ EBITDA (MM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>