force-app/main/default/objects/Investment__c/fields/EBITDA_when_Acq__c.field-meta.xml
<CustomField>
    <fullName>EBITDA_when_Acq__c</fullName>
    <label>EBITDA (when Acq.)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>