force-app/main/default/objects/Investment__c/fields/Enterprise_Value_MM__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Value_MM__c</fullName>
    <description>Enterprise Value</description>
    <label>Enterprise Value (MM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>