force-app/main/default/objects/Investment__c/fields/EV_Source__c.field-meta.xml
<CustomField>
    <fullName>EV_Source__c</fullName>
    <description>Enterprise Value Source</description>
    <label>EV Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>