force-app/main/default/objects/Investment__c/fields/Expected_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Exit_Date__c</fullName>
    <label>Expected Exit Date</label>
    <type>Date</type>
</CustomField>