force-app/main/default/objects/Investment__c/fields/Flag_Reason_Comment__c.field-meta.xml
<CustomField>
    <fullName>Flag_Reason_Comment__c</fullName>
    <label>Flag Reason Comment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>