force-app/main/default/objects/Investment__c/fields/From_CAPIQ__c.field-meta.xml
<CustomField>
    <fullName>From_CAPIQ__c</fullName>
    <formula>/**Needs to be the informatica integration user**/
IF(CreatedBy.Alias == &apos;sadmin&apos;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From CAPIQ?</label>
    <type>Checkbox</type>
</CustomField>