force-app/main/default/objects/Investment__c/fields/FS_Prospect_Ranking__c.field-meta.xml
<CustomField>
    <fullName>FS_Prospect_Ranking__c</fullName>
    <label>FS Prospect Ranking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Not a Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>