force-app/main/default/objects/Investment__c/fields/HL_Comments__c.field-meta.xml
<CustomField>
    <fullName>HL_Comments__c</fullName>
    <description>Investment Comments</description>
    <label>HL Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>