force-app/main/default/objects/Investment__c/fields/HL_FS_Relationship__c.field-meta.xml
<CustomField>
    <fullName>HL_FS_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to track the Relationship HL EU FS team uses.</description>
    <label>HL FS Relationship</label>
    <type>Checkbox</type>
</CustomField>