force-app/main/default/objects/Investment__c/fields/HL_Industry__c.field-meta.xml
<CustomField>
    <fullName>HL_Industry__c</fullName>
    <formula>Portfolio_CapIQ_Company__r.Industry_Group_REPORTING__c  &amp; &apos; - &apos; &amp;  TEXT(Portfolio_CapIQ_Company__r.HL_Sector__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To modify, navigate to the CapIQ Portfolio Company.</inlineHelpText>
    <label>HL Industry</label>
    <type>Text</type>
</CustomField>