force-app/main/default/objects/Investment__c/fields/HL_Industry_LK__c.field-meta.xml
<CustomField>
    <fullName>HL_Industry_LK__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>HL&apos;s perspective on the selected Investment&apos;s Industry</inlineHelpText>
    <label>HL Industry LK</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Only FSC Industries are allowed.</errorMessage>
        <filterItems>
            <field>Industry__c.FSC__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Industry__c</referenceTo>
    <relationshipLabel>Investment</relationshipLabel>
    <relationshipName>Investment</relationshipName>
    <type>Lookup</type>
</CustomField>