force-app/main/default/objects/Investment__c/fields/HL_Industry_Sector__c.field-meta.xml
<CustomField>
    <fullName>HL_Industry_Sector__c</fullName>
    <description>it pulls the industry name because name = sector in this case. the help text is worded that way to minimize confusion - ayu</description>
    <formula>(IF(FIND(&quot; - &quot;, HL_Portfolio_Co_HL_Industry__c) &gt; 0, LEFT(HL_Portfolio_Co_HL_Industry__c, FIND( &quot; - &quot;, HL_Portfolio_Co_HL_Industry__c) - 1), HL_Portfolio_Co_HL_Industry__c)) + &quot; - &quot; + HL_Portfolio_Co_HL_Sector__c</formula>
    <inlineHelpText>Combines Industry reporting group and the selected HL Industry&apos;s sector</inlineHelpText>
    <label>HL Industry Sector</label>
    <type>Text</type>
</CustomField>