force-app/main/default/objects/Investment__c/fields/HL_Oil_and_Gas__c.field-meta.xml
<CustomField>
    <fullName>HL_Oil_and_Gas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Track the Relationship HL O&amp;G team uses</description>
    <label>HL Oil and Gas</label>
    <type>Checkbox</type>
</CustomField>