force-app/main/default/objects/Investment__c/fields/HL_Portfolio_Co_HL_Sector__c.field-meta.xml
<CustomField>
    <fullName>HL_Portfolio_Co_HL_Sector__c</fullName>
    <label>Portfolio Co. HL Sector</label>
    <length>100</length>
    <type>Text</type>
</CustomField>