force-app/main/default/objects/Investment__c/fields/HL_Sold_To__c.field-meta.xml
<CustomField>
    <fullName>HL_Sold_To__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HL Sold To</label>
    <type>Checkbox</type>
</CustomField>