force-app/main/default/objects/Investment__c/fields/Hold_Duration_years__c.field-meta.xml
<CustomField>
    <fullName>Hold_Duration_years__c</fullName>
    <label>Hold Duration (years)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>