force-app/main/default/objects/Investment__c/fields/Include_on_Offsite_Template__c.field-meta.xml
<CustomField>
    <fullName>Include_on_Offsite_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include on Offsite Template</label>
    <type>Checkbox</type>
</CustomField>