force-app/main/default/objects/Investment__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <formula>Portfolio_CapIQ_Company__r.Industry__c</formula>
    <label>Industry</label>
    <type>Text</type>
</CustomField>