force-app/main/default/objects/Investment__c/fields/Investment_Contact__c.field-meta.xml
<CustomField>
    <fullName>Investment_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>External_Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Investment</relationshipLabel>
    <relationshipName>Investment</relationshipName>
    <type>Lookup</type>
</CustomField>