force-app/main/default/objects/Investment__c/fields/Merge_Group__c.field-meta.xml
<CustomField>
    <fullName>Merge_Group__c</fullName>
    <label>Merge Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>