force-app/main/default/objects/Investment__c/fields/Portfolio_CapIQ_Company__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_CapIQ_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CapIQ Portfolio Company</label>
    <referenceTo>CapIQ_Company__c</referenceTo>
    <relationshipLabel>Investment Sponsor</relationshipLabel>
    <relationshipName>Investment_Company</relationshipName>
    <type>Lookup</type>
</CustomField>