force-app/main/default/objects/Investment__c/fields/Potential_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Potential_Opportunity__c</fullName>
    <description>FS Potential Opportunity</description>
    <label>Potential Opportunity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>