force-app/main/default/objects/Investment__c/fields/Prospect_Type__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Type__c</fullName>
    <label>Prospect Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Prospect__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CF</fullName>
            </value>
            <value>
                <fullName>FVA</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>