force-app/main/default/objects/Investment__c/fields/Related_Fund__c.field-meta.xml
<CustomField>
    <fullName>Related_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Fund</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Fund__c.CapIQ_Company__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Sponsor_CapIQ_Company__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Investments</relationshipLabel>
    <relationshipName>Investment</relationshipName>
    <type>Lookup</type>
</CustomField>