force-app/main/default/objects/Investment__c/fields/Revenue_CapIQ__c.field-meta.xml
<CustomField>
    <fullName>Revenue_CapIQ__c</fullName>
    <label>CapIQ Revenue (MM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>