force-app/main/default/objects/Investment__c/fields/Revenue_HL__c.field-meta.xml
<CustomField>
    <fullName>Revenue_HL__c</fullName>
    <label>HL Revenue (MM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>