force-app/main/default/objects/Investment__c/fields/Sector_Banker__c.field-meta.xml
<CustomField>
    <fullName>Sector_Banker__c</fullName>
    <description>Banker responsible for deals of a specific sector</description>
    <label>Sector Banker</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rob Emmerson</fullName>
            </value>
            <value>
                <fullName>Florian Martinez</fullName>
            </value>
            <value>
                <fullName>Antina Morell</fullName>
            </value>
            <value>
                <fullName>Rachel Schaller</fullName>
            </value>
            <value>
                <fullName>Jon Harrison</fullName>
            </value>
            <value>
                <fullName>Laurens van Asselt</fullName>
            </value>
            <value>
                <fullName>Shaun Browne</fullName>
            </value>
            <value>
                <fullName>Simon Croft-Baker</fullName>
            </value>
            <value>
                <fullName>James Scallan</fullName>
            </value>
            <value>
                <fullName>Garyth Stone</fullName>
            </value>
            <value>
                <fullName>Simon Gluckstein</fullName>
            </value>
            <value>
                <fullName>James Local</fullName>
            </value>
            <value>
                <fullName>Lawrence Guthrie</fullName>
            </value>
            <value>
                <fullName>Christian Kent</fullName>
            </value>
            <value>
                <fullName>David Sola</fullName>
            </value>
            <value>
                <fullName>Pierre Gaulier</fullName>
            </value>
            <value>
                <fullName>David Brock</fullName>
            </value>
            <value>
                <fullName>Martin Bastian</fullName>
            </value>
            <value>
                <fullName>Steffen Leckert</fullName>
            </value>
            <value>
                <fullName>Tobias Rieg</fullName>
            </value>
            <value>
                <fullName>Nicolas Zintl</fullName>
            </value>
            <value>
                <fullName>Ulrich Graebner</fullName>
            </value>
            <value>
                <fullName>Matteo Manfredi</fullName>
            </value>
            <value>
                <fullName>Rob Oudman</fullName>
            </value>
            <value>
                <fullName>Rob Hendriks</fullName>
            </value>
            <value>
                <fullName>Andrew Adams</fullName>
            </value>
            <value>
                <fullName>Tara Carter</fullName>
            </value>
            <value>
                <fullName>Mark Fisher</fullName>
            </value>
            <value>
                <fullName>Lalit Kasat</fullName>
            </value>
            <value>
                <fullName>Julian Moore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>