force-app/main/default/objects/Investment__c/fields/Sponsor_CapIQ_Company__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_CapIQ_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CapIQ Sponsor Company</label>
    <referenceTo>CapIQ_Company__c</referenceTo>
    <relationshipLabel>Investment Company</relationshipLabel>
    <relationshipName>Investment_Sponsor</relationshipName>
    <type>Lookup</type>
</CustomField>