force-app/main/default/objects/Investment__c/fields/Vintage__c.field-meta.xml
<CustomField>
    <fullName>Vintage__c</fullName>
    <description>Date of the first investment</description>
    <label>Vintage</label>
    <type>Date</type>
</CustomField>