force-app/main/default/objects/Investment__c/validationRules/Cannot_Save_Without_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Save_Without_Status</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &apos;&apos;)</errorConditionFormula>
    <errorMessage>Cannot save without a status</errorMessage>
</ValidationRule>