force-app/main/default/objects/Investment__c/validationRules/Sponsor_and_Portfolio_Must_Differ.validationRule-meta.xml
<ValidationRule>
    <fullName>Sponsor_and_Portfolio_Must_Differ</fullName>
    <active>true</active>
    <errorConditionFormula>Portfolio_CapIQ_Company__r.Company_ID__c == Sponsor_CapIQ_Company__r.Company_ID__c</errorConditionFormula>
    <errorMessage>Sponsor and Portfolio Company cannot be same.</errorMessage>
</ValidationRule>