force-app/main/default/objects/Investment__c/listViews/All_CapIQ_Company_Relationships.listView-meta.xml
<ListView>
    <fullName>All_CapIQ_Company_Relationships</fullName>
    <columns>NAME</columns>
    <columns>Sponsor_CapIQ_Company__c</columns>
    <columns>Portfolio_CapIQ_Company__c</columns>
    <columns>Investment_Date__c</columns>
    <columns>Current_to_Prior_Date__c</columns>
    <columns>Company_Relationship_Type__c</columns>
    <columns>Actual_Relationship_Type__c</columns>
    <columns>Percent_Ownership__c</columns>
    <columns>CapIQ_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Portfolio_CapIQ_Company__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Sponsor_CapIQ_Company__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All CapIQ Company Relationships</label>
</ListView>