force-app/main/default/objects/Investment__c/listViews/All_Covered_Investments.listView-meta.xml
<ListView>
    <fullName>All_Covered_Investments</fullName>
    <columns>NAME</columns>
    <columns>Portfolio_CapIQ_Company__c</columns>
    <columns>Sponsor_CapIQ_Company__c</columns>
    <columns>Investment_Date__c</columns>
    <columns>Current_to_Prior_Date__c</columns>
    <columns>Company_Relationship_Type__c</columns>
    <columns>Actual_Relationship_Type__c</columns>
    <columns>Percent_Ownership__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Covered Investments</label>
</ListView>